--- a/flask-image/app/ttp/interfaces.jinja2
+++ b/flask-image/app/ttp/interfaces.jinja2
@@ -1,7 +1,3 @@
 interface {{ interface }}
- description {{ description }}
- switchport access vlan {{ access_vlan }}
- switchport mode {{ mode }}
- switchport trunk native vlan {{ native_vlan }}
- switchport voice vlan {{ voice_vlan }}
- ip address {{ ip_address }} {{ subnet }}
+ encapsulation dot1q {{ vlan }}
+ ip address {{ ip_address }} {{  subnet }}
